<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeamPlanBuch</string>
    <string name="action_settings">Einstellungen</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="title_activity_register_screen">Registrierung</string>
    <string name="event">Termin erstellen</string>
    <string name="title_activity_home_screen">Home</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="plz">PLZ</string>
    <string name="wohnort">Wohnort</string>
    <string name="mail">E-Mail</string>
    <string name="strasse">Strasse+Hausnummer</string>
    <string name="password">Passwort</string>
    <string name="passwordconfirm">Passwort wiederholen</string>
    <string name="title_activity_create_event_screen">Termin erstellen</string>     
    <string name="title_activity_mail_screen">Email an Leiter</string>    
    <string name="title_activity_settings_screen">Einstellungen</string>   
    <string name="title_activity_profil_screen">Profil ändern</string>   
    <string name="title_activity_login_screen">Login</string>  
    <string name="create_event">Termin erstellen</string>
	<string name="exit">Abmelden</string>
	<string name="logout">Logout</string>
	<string name="profil">Profil</string>
	<string name="contact">Mail an Leiter</string>
	<string name="team">Team</string>
	<string name="nowitzki">nowitzki</string>
	<string name="eventlist">Liste der Events</string>
	<string name="update">Update</string>
	<string name="yes">ich nehme teil</string>
	<string name="no">ich nehme nicht teil</string>
	<string name="eventdata">Abstimmung</string>
</resources>
